test/libsolidity/syntaxTests/array/length/const_cannot_be_fractional.sol
contract C {
    fixed constant L = 10.5;
    uint[L] ids;
}
// ----
// UnimplementedFeatureError: Not yet implemented - FixedPointType.
